<resources>
    <string name="app_name" translatable="false">Mee Player</string>

    <string name="video_resize_fit">Fit</string>
    <string name="video_resize_crop">Crop</string>

    <string name="video_orientation_video">Video orientation</string>
    <string name="video_orientation_sensor">Auto-rotate</string>

    <string name="onboarding_open_title">Choose a video to play</string>
    <string name="onboarding_open_description">Tap to open a video file. Long tap to load external subtitles.</string>

    <string name="open_subtitles">Load subtitles</string>

    <string name="error_details">Details</string>
    <string name="error_files_missing">Files app is disabled or missing</string>

    <string name="subtitles_scope">To automatically load external subtitles, grant %s access to the topmost folder containing your videos (e.g. Movies).</string>

    <string name="permission_dialog_message_deny">In order to play video, we need access to media files on your device.</string>
    <string name="permission_dialog_message_permanant_deny">In order to play video, we need access to media files on your device. Go to settings to enable the permission.</string>
    <string name="permission_dialog_title">Need Permissions</string>
    <string name="permission_dialog_positive_button_text_deny">Allow Access</string>
    <string name="permission_dialog_positive_button_text_permanant_deny">OPEN SETTINGS</string>
    <string name="permission_dialog_negative_button">Exit App</string>


    <!--    Bottom Sheet Video Item-->
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="file_info">File info</string>

    <string name="folders">Folders</string>
    <string name="videos">Videos</string>

    <string name="video_count">%s video</string>
    <string name="videos_count">%s videos</string>

    <string name="tap_again_to_exit_app">Tap again to exit app</string>

    <!--    File info alert dialog-->
    <string name="information">Information</string>
    <string name="title">Title</string>
    <string name="size">Size</string>
    <string name="format">Format</string>
    <string name="path">Path</string>
    <string name="date">Date</string>
    <string name="close">Close</string>

    <!--    Sorting -->
    <string name="sort_by">Sort by</string>
    <string name="newest_date_first">Newest date first</string>
    <string name="oldest_date_first">Oldest date first</string>
    <string name="largest_first">Largest first</string>
    <string name="smallest_first">Smallest first</string>
    <string name="name_a_z"><![CDATA[Name A -> Z]]></string>
    <string name="name_z_a"><![CDATA[Name Z -> A]]></string>

    <string name="items_selected">%s selected</string>
    <string name="delete_song">Delete Song</string>
    <string name="delete_songs">Delete Songs</string>
    <string name="cancel">Cancel</string>
    <string name="delete_one_song">Delete %s song</string>
    <string name="delete_multiple_songs">Delete %s songs</string>

</resources>